# Raspberry-Pi

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  TASKS.md  pyproject.toml  requirements.txt
desktop/: paul-pi-assistant.desktop
docs/: PI_SETUP.md  ROADMAP.md  SUPABASE_SETUP.md  TEST_PLAN.md
scripts/: clean_local_data.sh  install_desktop_launcher.sh  list_audio_devices.sh  run.sh  setup_pi.sh  start_ui.sh  test_mic.sh
src/pi_assistant/: __init__.py  audio.py  config.py  dashboard.py  gpio_button.py  local_store.py  main.py  supabase_store.py  transcribe.py  ui.py  workflow.py
supabase/: schema.sql
systemd/: pi-assistant.service.example
