[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paul-pi-assistant"
version = "0.1.0"
description = "Raspberry Pi personal assistant V1 voice capture pipeline."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.99.0",
  "supabase>=2.15.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
pi-assistant = "pi_assistant.main:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
